[TESTBUG] test/gc/g1/TestRegionLivenessPrint.java misses -XX:+UnlockDiagnosticVMOption flag

XMLWordPrintable

    • gc
    • b120

      test/gc/g1/TestRegionLivenessPrint.java uses the WhiteBoxAPI but misses -XX:+UnlockDiagnosticVMOption flag:

      Error: VM option 'WhiteBoxAPI' is diagnostic and must be enabled via -XX:+UnlockDiagnosticVMOptions.
      Error: The unlock option must precede 'WhiteBoxAPI'.
      Error: Could not create the Java Virtual Machine.
      Error: A fatal exception has occurred. Program will exit.

            Assignee:
            Thomas Schatzl
            Reporter:
            Dmitry Fazunenko (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: