8154141: [TESTBUG] test/gc/g1/TestRegionLivenessPrint.java misses -XX:+UnlockDiagnosticVMOption flag Reviewed-by: dfazunen, jwilhelm